Updated config baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,8 @@ name: Web Application Guidelines 3.0
 markdown: kramdown
 pygments: true
 exclude: [Gemfile, Gemfile.lock, .gitignore, README.md, COPYING, build.sh]
-baseurl: /wag
+baseurl: /wag-intranet-v3
 cdn_url: //assets.malmo.se/internal/3.0
-# cdn_url: //assets.malmo.se/internal/3.0-staging
 # cdn_url: //www.local.malmo.se:3001/assets
 permalink: /:categories/:title
 relative_permalinks: false
